Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71374

ObjectModel and DelegateModel use cases assertion.

    XMLWordPrintable

Details

    • Linux/X11
    • 41dd68344c3d7d0a6a5afc93ab4a05157bed3d3c (qt/qtdeclarative/5.14)

    Description

      1   gsignal                                                                                                     0x7ffff1347e7b 
      2   abort                                                                                                       0x7ffff1349231 
      3   qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&)      qlogging.cpp               1901 0x7ffff2b4c10d 
      4   QMessageLogger::fatal(const char *, ...) const                              qlogging.cpp               887  0x7ffff2b50272 
      5   qt_assert(const char *, const char *, int)                                  qglobal.cpp                3208 0x7ffff2b3056e 
      6   QQmlTableInstanceModel::~QQmlTableInstanceModel()                           qqmltableinstancemodel.cpp 91   0x7ffff51b1321 
      7   QQmlTableInstanceModel::~QQmlTableInstanceModel()                           qqmltableinstancemodel.cpp 86   0x7ffff51b1a89 
      8   QQuickTableViewPrivate::syncModel()                                         qquicktableview.cpp        1629 0x7ffff783b466 
      9   QQuickTableViewPrivate::syncWithPendingChanges()                            qquicktableview.cpp        1586 0x7ffff78353de 
      10  QQuickTableViewPrivate::updatePolish()                                      qquicktableview.cpp        1494 0x7ffff781e95d 
      11  QQuickWindowPrivate::polishItems()                                          qquickwindow.cpp           309  0x7ffff73f7663 
      12  QSGThreadedRenderLoop::polishAndSync(QSGThreadedRenderLoop::Window *, bool) qsgthreadedrenderloop.cpp  1188 0x7ffff7296a4c 
      13  QSGThreadedRenderLoop::handleUpdateRequest(QQuickWindow *)                  qsgthreadedrenderloop.cpp  1035 0x7ffff7297940 
      14  QQuickWindow::event(QEvent *)                                               qquickwindow.cpp           1651 0x7ffff740c556 
      15  QCoreApplicationPrivate::notify_helper(QObject *, QEvent *)                 qcoreapplication.cpp       1221 0x7ffff3333c09 
      16  doNotify(QObject *, QEvent *)                                               qcoreapplication.cpp       1151 0x7ffff3332ed5 
      17  QCoreApplication::notify(QObject *, QEvent *)                               qcoreapplication.cpp       1137 0x7ffff333309a 
      18  QGuiApplication::notify(QObject *, QEvent *)                                qguiapplication.cpp        1790 0x7ffff5ac0f81 
      19  QCoreApplication::notifyInternal2(QObject *, QEvent *)                      qcoreapplication.cpp       1061 0x7ffff3332bfb 
      20  QCoreApplication::sendEvent(QObject *, QEvent *)                            qcoreapplication.cpp       1451 0x7ffff3334efd 
      ... <More>                                                                                                                     
      
      

      Assertion at:

      /qtdeclarative/src/qml/types/qqmltableinstancemodel.cpp, line 91

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            yulong.bai Bai Yulong
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes